// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders as a anchor when \`href\` defined 1`] = `
.emotion-0 {
  display: inline-block;
  margin: 0;
  padding: 0;
  font: inherit;
  color: #0CD664;
  background-color: transparent;
  border: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover,
.emotion-0:focus,
.emotion-0:active {
  color: #3DDE83;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

<a
  className="emotion-0"
  to="#test-path"
>
  I'm a link
</a>
`;

exports[`Link renders as a button if prop as="button" was passed 1`] = `
.emotion-0 {
  display: inline-block;
  margin: 0;
  padding: 0;
  font: inherit;
  color: #0CD664;
  background-color: transparent;
  border: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover,
.emotion-0:focus,
.emotion-0:active {
  color: #3DDE83;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

<button
  className="emotion-0"
  to="#test"
>
  I look like a link, but really I'm a button
</button>
`;

exports[`Link renders as a link by default 1`] = `
.emotion-0 {
  display: inline-block;
  margin: 0;
  padding: 0;
  font: inherit;
  color: #0CD664;
  background-color: transparent;
  border: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover,
.emotion-0:focus,
.emotion-0:active {
  color: #3DDE83;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

<a
  className="emotion-0"
  to="#test"
>
  I look like a link
</a>
`;

exports[`Link renders as a optional 1`] = `
.emotion-0 {
  display: inline-block;
  margin: 0;
  padding: 0;
  font: inherit;
  color: #0CD664;
  background-color: transparent;
  border: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #8697A2;
}

.emotion-0:hover,
.emotion-0:focus,
.emotion-0:active {
  color: #3DDE83;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0:hover,
.emotion-0:focus,
.emotion-0:active,
.emotion-0.active {
  color: #fff;
}

<a
  className="emotion-0"
  to="#test-path"
>
  I'm an optiona; link
</a>
`;

exports[`Link renders as a secondary 1`] = `
.emotion-0 {
  display: inline-block;
  margin: 0;
  padding: 0;
  font: inherit;
  color: #0CD664;
  background-color: transparent;
  border: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #8697A2;
}

.emotion-0:hover,
.emotion-0:focus,
.emotion-0:active {
  color: #3DDE83;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

<a
  className="emotion-0"
  to="#test-path"
>
  I'm a secondary link
</a>
`;

exports[`Link renders as disabled for anchor elements 1`] = `
.emotion-0 {
  display: inline-block;
  margin: 0;
  padding: 0;
  font: inherit;
  color: #0CD664;
  background-color: transparent;
  border: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover,
.emotion-0:focus,
.emotion-0:active {
  color: #3DDE83;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

<a
  className="emotion-0"
  disabled={true}
  to="#test-path"
>
  I'm a link
</a>
`;

exports[`Link renders as disabled for button elements 1`] = `
.emotion-0 {
  display: inline-block;
  margin: 0;
  padding: 0;
  font: inherit;
  color: #0CD664;
  background-color: transparent;
  border: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover,
.emotion-0:focus,
.emotion-0:active {
  color: #3DDE83;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

<button
  className="emotion-0"
  disabled={true}
  to="#test"
>
  I look like a link, but really I'm a button
</button>
`;
